added opton to animate the deck

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                         Generate new Deck
                     </button>
                 </div>
+                <div class="text-center mt-3 mb-3">
+                    <input type="checkbox" id="animateCheckbox">
+                    <label for="animateCheckbox">Animate deck (one card at a time)</label>
+                </div>
             </section>
         </main>
         <script src="js/erratic_deck_generator.js"></script>
