--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>
                 Erratic Deck Generator
             </h1>
+            <p style="font-family: Balatro;">TEST FONT</p>
         </header>
         <main>
             <section id="deck">
